corrected the overflow of the container

--- a/src/index.css
+++ b/src/index.css
@@ -8,40 +8,9 @@ body {
     overflow-x: hidden;
     scroll-snap-type: y mandatory;
 
-    scrollbar-width: thin;
-
-    scrollbar-color: #6b6fbf #e3e7ffe4;
 
 }
 
-body::-webkit-scrollbar {
-    width: 12px;
-
-}
-
-body::-webkit-scrollbar-track {
-    background: #e3e7ffe4;
-
-}
-
-body::-webkit-scrollbar-thumb {
-    background-color: #6b6fbf;
-    /* Scrollbar thumb color */
-    border-radius: 6px;
-    /* Roundness of the scrollbar thumb */
-    border: 2px solid #e3e7ffe4;
-    /* Padding around the thumb */
-}
-
-body::-webkit-scrollbar-thumb:hover {
-    background-color: #4a4f9f;
-    /* Thumb color on hover */
-}
-
-body::-webkit-scrollbar-thumb:active {
-    background-color: #3b3f8f;
-    /* Thumb color on click */
-}
 
 .dvh100 {
     min-height: 100dvh;
